--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,105 +1,99 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.container{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.carosello{
+  height: 70%;
+  width: 70%;
+  display: flex;
+
+}
+.items{
+  width: 70%;
+  height: 100%;
+  position: relative;
+}
+.item{
+  height: 100%;
+}
+.item img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.thumbs{
+  height: 100%;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+  position: relative;
+}
+.thumb{
+  width: 100%;
+  height: calc(100% / 5);
+}
+.thumbs img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(0.5);
+}
+.thumb .active{
+  filter: brightness(1);
 }
 
-.container {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.item.active{
+  display: block;
 }
 
-.item {
-    float: left;
-    width: 700px;
-    height: 300px;
-    position: relative;
+.item{
+  display: none;
+  position: relative;
+}
+.item .info{
+  position: absolute;
+  bottom: 10px;
+  left: 5px;
+  right: 5px;
+  background-color: rgba(80, 113, 142, 0.69);
+  border-radius: 10px;
 }
 
-.item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+
+.next,.prev{
+  font-size: 20px;
+  cursor: pointer;
 }
 
-.item .text {
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
-    text-align: right;
-    color: white;
+.prev{
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+}
+.next{
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
 }
 
-.thumbs {
-    float: left;
-    height: 300px;
-    background: #000;
-    position: relative;
-}
+.player{
+  position: absolute;
+  color: white;
+  z-index: 10;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
 
-.thumb {
-    height: calc((300px) / 5);
-    opacity: 0.5;
 }
-
-.thumb img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.thumb.active {
-    border: 2px solid #ccc;
-    opacity: 1;
-}
-
-.prev, .next {
-    width: 20px;
-    height: 20px;
-    margin: 10px 0;
-    border-radius: 50%;
-    background: #ccc;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    cursor: pointer;
-    z-index: 999;
-}
-
-.next {
-    bottom: 0;
-}
-
-/*
-EXTRA: in questo esempio gli accordion vengono creati
-usando 2 bordi di un quadratino ruotato di 45 gradi
-In una versione base si possono usare delle icone
-oppure i caratteri ∧ (&and;) e ∨ (&or;)
- */
-.prev::after {
-    content: '';
-    width: 10px;
-    height: 10px;
-    border-top: 1px solid black;
-    border-right: 1px solid black;
-    display: block;
-    position: absolute;
-    top: 35%;
-    left: 50%;
-    transform: translate(-50%) rotate(-45deg);
-}
-
-.next::before {
-    content: '';
-    width: 10px;
-    height: 10px;
-    border-top: 1px solid black;
-    border-right: 1px solid black;
-    display: block;
-    position: absolute;
-    bottom: 35%;
-    left: 50%;
-    transform: translate(-50%) rotate(135deg);
+.player i{
+  margin: 0 10px;
+  cursor: pointer;
 }
