--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@
   justify-content: space-between;
   overflow: hidden;
   position: relative;
+  background-color: black;
 }
 .thumb{
   width: 100%;
@@ -44,6 +45,7 @@
 }
 .thumb .active{
   filter: brightness(1);
+  border: solid skyblue 3px;
 }
 
 .item{
